devops/jenkins/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  namespace: jenkins
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/path:   /
    prometheus.io/port:   '8080'
spec:
  selector:
    app: jenkins-server
  ports:
    - name: web
      port: 8080
      targetPort: 8080
    - name: slave
      port: 50000
      targetPort: 50000
